<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".MainActivity"
    tools:ignore="RtlHardcoded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/base_margin"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_section_title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_wind_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_wind_left" />

        <Button
            android:id="@+id/btn_wind_left"
            style="@style/AppTheme.Button"
            android:text="@string/wind_direction_left"
            app:layout_constraintLeft_toRightOf="@id/title_wind"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_wind_right"
            style="@style/AppTheme.Button"
            android:text="@string/wind_direction_right"
            app:layout_constraintLeft_toRightOf="@id/btn_wind_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/animation"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_wind_left" />

        <Button
            android:id="@+id/btn_anim_start"
            style="@style/AppTheme.Button"
            android:text="@string/start"
            app:layout_constraintLeft_toRightOf="@id/title_animation"
            app:layout_constraintTop_toBottomOf="@id/btn_wind_left" />

        <Button
            android:id="@+id/btn_anim_stop"
            style="@style/AppTheme.Button"
            android:text="@string/stop"
            app:layout_constraintLeft_toRightOf="@id/btn_anim_start"
            app:layout_constraintTop_toTopOf="@id/btn_anim_start" />

        <Button
            android:id="@+id/btn_anim_reset"
            style="@style/AppTheme.Button"
            android:text="@string/reset"
            app:layout_constraintLeft_toRightOf="@id/btn_anim_stop"
            app:layout_constraintTop_toTopOf="@id/btn_anim_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lefttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_part_left"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            app:fontFamily="@font/amaz_doom_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/righttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_part_right"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            app:fontFamily="@font/amaz_doom_right" />
    </LinearLayout>

    <com.dancing_koala.fireanim.FireView
        android:id="@+id/fireview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>